--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
             <artifactId>selenium-java</artifactId>
             <version>3.0.0-beta2</version>
         </dependency>
+        <!--
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>3.0.0-beta2</version>
+        </dependency>
+    -->
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
