--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 before_script:
   - "export DISPLAY=:99.0"
-  - "export BROWSER=firefox"
+  - "export BROWSER=oldfirefox"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
 script: mvn test
