--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ jdk:
   - oraclejdk8
 before_script:
   - "export DISPLAY=:99.0"
-  - "export BROWSER=oldfirefox"
+  - "export BROWSER=firefox"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
 script: mvn test
