--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: java
 jdk:
   - oraclejdk8
+addons:
+  firefox: "latest"
 before_script:
   - "export DISPLAY=:99.0"
   - "export BROWSER=firefox"
