--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ jdk:
 addons:
   firefox: "latest"
 before_script:
-  - export CHROME_BIN=chromium-browser
+  #- export CHROME_BIN=chromium-browser
   - "export DISPLAY=:99.0"
-  - "export BROWSER=oldfirefox"
+  - "export BROWSER=sauce"
   - "sh -e /etc/init.d/xvfb start"
   - sleep 3 # give xvfb some time to start
 script: mvn test
